@@ -149,14 +149,11 @@ class GeoDir_Admin_Blocks {
 //		);
 	}
 
+	public function search_bp() {
+		$post_types = geodir_get_posttypes( 'options-plural' );
 
+		$post_type_attrs = count( $post_types ) > 1 ? "  post_type=''  post_type_hide='false'" : "";
 
-	public function search_bp(){
-
-		$post_types = geodir_get_posttypes('options-plural');
-
-		$post_type_option = count($post_types) > 1 ? "post_type=''" : '';
-		$post_type_hide_option = count($post_types) > 1 ? " post_type_hide='false' " : '';
 		/**
 		 * Filter search block pattern attributes.
 		 *
@@ -173,7 +170,7 @@ class GeoDir_Admin_Blocks {
 				'description' => '',
 				'categories'  => array( 'geodirectory-parts' ),
 				'content'     => "<!-- wp:geodirectory/geodir-widget-search {\"bg\":\"light\",\"pt\":\"3\",\"pr\":\"5\",\"pl\":\"5\",\"border\":\"gray\",\"rounded\":\"rounded-pill\",\"content\":\"\"} -->
-<div class=\"wp-block-geodirectory-geodir-widget-search\">[gd_search ".$post_type_option.$post_type_hide_option."bg='light'  mt=''  mr=''  mb='3'  ml=''  pt='3'  pr='5'  pb=''  pl='5'  border='gray'  rounded='rounded-pill'  rounded_size=''  shadow=''" . $extra_attrs . " ]</div>
+<div class=\"wp-block-geodirectory-geodir-widget-search\">[gd_search" . $post_type_attrs . "  hide_search_input='false'  hide_near_input='false'  bg='light'  mt=''  mr=''  mb='3'  ml=''  pt='3'  pr='5'  pb=''  pl='5'  border='gray'  rounded='rounded-pill'  rounded_size=''  shadow=''" . $extra_attrs . " ]</div>
 <!-- /wp:geodirectory/geodir-widget-search -->",
 			)
 		);
@@ -185,7 +182,7 @@ class GeoDir_Admin_Blocks {
 				'description' => '',
 				'categories'  => array( 'geodirectory-parts' ),
 				'content'     => "<!-- wp:geodirectory/geodir-widget-search {\"show_advanced\":true,\"pt\":\"3\",\"pr\":\"3\",\"pl\":\"3\",\"border\":\"gray\",\"rounded\":\"rounded\",\"shadow\":\"shadow-sm\",\"content\":\"\"} -->
-<div class=\"wp-block-geodirectory-geodir-widget-search\">[gd_search ".$post_type_option.$post_type_hide_option."bg=''  mt=''  mr=''  mb='3'  ml=''  pt='3'  pr='3'  pb=''  pl='3'  border='gray'  rounded='rounded'  rounded_size=''  shadow='shadow-sm'" . $extra_attrs . " ]</div>
+<div class=\"wp-block-geodirectory-geodir-widget-search\">[gd_search" . $post_type_attrs . "  hide_search_input='false'  hide_near_input='false'  bg=''  mt=''  mr=''  mb='3'  ml=''  pt='3'  pr='3'  pb=''  pl='3'  border='gray'  rounded='rounded'  rounded_size=''  shadow='shadow-sm'" . $extra_attrs . " ]</div>
 <!-- /wp:geodirectory/geodir-widget-search -->",
 			)
 		);
