@@ -1,6 +1,7 @@
 = 2.2.6 =
 * Float value parsing shows comma with pl_PL locale - FIXED
 * Elementor custom tag shows country name untranslated - FIXED
+* Option added to hide search & near inputs in search form - ADDED
 
 = 2.2.4 =
 * Neighbourhood SEO variable not working on single page - FIXED
